# File: tests/CMakeLists.txt

ADD_SUBDIRECTORY (adj)
ADD_SUBDIRECTORY (dir)
ADD_SUBDIRECTORY (dirlist)
ADD_SUBDIRECTORY (door)
ADD_SUBDIRECTORY (lockeddoor)
ADD_SUBDIRECTORY (map)
ADD_SUBDIRECTORY (passage)
ADD_SUBDIRECTORY (paul1)
ADD_SUBDIRECTORY (room)
ADD_SUBDIRECTORY (roomitems)
ADD_SUBDIRECTORY (start)
ADD_SUBDIRECTORY (strength)

ENABLE_TESTING ()
